Edits to guidelines paper chapter 2

--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -7,16 +7,18 @@ Here we outline principles for developing LRPs for Pacific salmon, adapted from 
 
 **Principle 1**. LRPs should be consistent with the goal of avoiding serious harm to the stock, as described in @dfoFisheryDecisionMakingFramework2009, and Section \@ref(intro). The LRP should be set above where serious harm is occurring, and should avoid long-term losses, such as those associated with fishing and ecosystem components. 
 
-**Principle 2**. LRPs should be selected based on the best available information for the stock. Criteria for evaluating best scientific information developed for US National Standards may be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review [@USCodeFederal2021].  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty arises from multiple LRPs or from various assumptions within a single LRP, these should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into stock assessment and clearly communicated.
+**Principle 2**. LRPs should be selected based on the best available <!--KH: scientific --> information for the stock. Criteria for evaluating best scientific information developed for US National Standards may be be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review [@USCodeFederal2021].  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty arises from multiple LRPs <!--KH: can "uncertainty arises from multiple LRPs" be expanded on a bit? - do you mean in uncertainty in LRP method, or structural model assumptions??  If the former,maybe something like "When uncertainty exists in which LRP estimation method is most appropriate, or from various assumptions ...."-->or from various assumptions within a single LRP, these <!--these uncertainties --> should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into stock assessment <!--KH: replace 'stock assessment' with 'the estimation of stock status' ?--> and clearly communicated.
 
 Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous reviews should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
+
+<!-- KH: in teh above paragraph, what is meant by 'previous reviews' should be used to to determine whether a peer review should be done?  Do you mean the level of change in methods or data availability should be considered?  Or, the length of time since the last review?-->
 
 Similarly, best practices, or practices that have been demonstrated to work well can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. "The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time." [@sainsburyBestPracticeReference2008]
 
 
 **Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of the stock. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases. To be operational, LRPs should also be easy to communicate to managers and stakeholders in a way that can be understood and used to inform decisions. <!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) -->
 
-**Principle 4**. LRPs should be reliably estimated. In other words, to the extend possible LRPs should capture underlying true levels of serious harm instead of noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection and the evidence to support underlying relationships and population dynamics used to derive LRPs. Where there is coherence in LRP estimates among analytical methods, this brings additional reliability to the LRP recommendation.
+**Principle 4**. LRPs should be reliably estimated. In other words, to the extent possible LRPs should capture underlying true levels of serious harm instead of noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection and the evidence to support underlying relationships and population dynamics used to derive LRPs. Where there is coherence in LRP estimates among analytical methods, this brings additional reliability to the LRP recommendation. <!--KH: the last sentence seems to overlap with principle 6, which I initially found confusing.  See my comment on principle 6 below.  I guess one option could be to remove this sentence from here (or, add it to principle 6?) and keep the focus of principle 4 on on data availability and error??   -->
 
 <!--RE: pgh below
 CW: 'statistically integrated' or sequential Bayes? i.e. sampling from posterior. 
@@ -33,14 +35,15 @@ Where possible, a statistically integrated approach for estimating LRPs should b
 
 **Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.
 
+<!--KH: Can we add something to principle 6 to better explain how if differs from reliably estimated?  I was initially confused because principle 4 mentions additional reliability from coherence in LRP estimates from different analytical methods.  Upon thinking about it a bit more, I now think that principle 6 is really saying don't get stuck in one way of thinking (e.g., 0.4Bmsy for LRPs); consider alternative approaches (Brecover, Bo, time-varying models), whereas principle 4 is about data availability and quality, as well as choosing an appropriate estimation method.  Am I on the right track??? -->
 
-**Principle 7**.  In addition to principles derived for marine <!--cw remove: fish --> species in general (Principles 1-6), for Pacific salmon, LRPs should be consistent with the goals and objectives of the WSP. The WSP framework for defining biological units and assessing their status along biological metrics with lower benchmarks to avoid risks of extinction is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 7**.  In addition to principles derived for marine <!--cw remove: fish --> species in general (Principles 1-6), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework for defining biological units and assessing their status along biological metrics with lower benchmarks to avoid risks of extinction is consistent with avoiding serious harm to the CU. <!--KH: consider rewording the above sentence as somthing like: "The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. --> Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status <!--KH: by focussing soley on SMU-level status -->can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
 <!-- CW: I think this next paragraph needs a header, so that we know it is not meant to be part of principle 7. I could not come up with  a good suggestion though.
 ## Applying the principles to LRP development
 -->
 
-For marine fish species LRPs are typically estimated as a minimum level of spawning biomass that should not be breached [@kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021], LRPs that consider the distribution of abundances among component CUs and alternative metrics of status within CUs such as trends in abundances and distribution of spawning are considered here to be consistent with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development <!--CW: following the principles listed above --> while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-4 from Marentette et al. (in prep.), and Principle 7 for Pacific salmon. We further develop guidelines for implementing these methods (Section \@ref(guidelines)) aligned with Principles 5-6 from Marentette et al. (in prep.).  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
+For marine fish species LRPs are typically estimated as a minimum level of spawning biomass that should not be breached [@kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021], <!--KH: start new sentence with:  However, for Pacific salmon, --> LRPs that consider the distribution of abundances among component CUs and <!--replace 'and' with 'as well as' --> alternative metrics of status within CUs such as trends in abundances and distribution of spawning, are considered here to be consistent <!--KH: replace 'are considered here to be' with 'are more consistent'-->with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development <!--CW: following the principles listed above --> while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-4 from Marentette et al. (in prep.), and Principle 7 for Pacific salmon. We further develop guidelines for implementing these methods (Section \@ref(guidelines)) aligned with Principles 5-6 from Marentette et al. (in prep.).  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
 
 Our intention is to describe approaches for deriving CU status applicable over a range of data qualities and types, and provide LRPs that integrate the CU-level information to the scale of SMUs.  In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Then candidate LRPs that integrate CU statuses are briefly described falling into two categories: those based on the proportion of component CUs above the red zone and those based on aggregate abundances.  A more detailed description of LRPs with technical details is included Working Paper 2. Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
 
