--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -2,13 +2,13 @@
 
 ## Stepwise approach for selecting LRPs
 
-We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate abundance-based LRPs are considered when required for fisheries management (e.g., local or international), and are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate abundance-based LRPs are considered "<!--KH: replace 'considered' with 'presented as an option for cases in which they are required for ....' ?? -->when required for fisheries management (e.g., local or international), and <!--replace 'and' with 'but'? --> are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
 
-### Data Availability and Spatial Scale(Step 1)
+### Data Availability and Spatial Scale (Step 1)
 
-The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine scale data on stocks or spawning sites to the CU level. 
+The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine scale data on stocks <!-- KH: use 'steams' instead of more ambiguous 'stocks'??--> or spawning sites to the CU level. 
 
-In some cases, spatial scales within CUs (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. 
+In some cases, spatial scales within CUs <!--KH: replace 'spatial scales within CUs' with 'a finer spatial scale than CU' --> (e.g., watersheds or subpopulations within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status [@holtIndicatorsStatusBenchmarks2009a] and these finer scales can be considered. 
 
 Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants/generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
@@ -16,10 +16,21 @@ We recommend that the decision on spatial scale of conservation for biological a
 
 Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish and PNI values are <0.5 (excluded from analyses) from those where production is dominated by natural-origin fish and PNI values are $\geqslant$ 0.5 (provisionally included in analyses) [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of marked fish on the spawning grounds are available for hatchery-influenced systems dominated by natural production, these proportions can be used to identify time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks that are not sensitive to annual variation in hatchery production.  
 
+
+<!--KH: This sentence from above needs editing:
+
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish and PNI values are <0.5 (excluded from analyses) from those where production is dominated by natural-origin fish and PNI values are $\geqslant$ 0.5 (provisionally included in analyses) [@withlerGeneticallyBasedTargets2018].
+
+Maybe something like:
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (defined as PNI values > 0.5) should be excluded from analyses, while those that are dominated by natural-origin fish (PNI values are $\geqslant$ 0.5), should be provisionally included in analyses.  These thresholds are based on guidelines (?) established by [@withlerGeneticallyBasedTargets2018].
+
+As a side note: what is meant by provisionally included?
+
+-->
   
 ### Assessing Data Deficiency (Step 2)
 
-Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009a]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years or are of low quality representing only presence/absence, similar to criteria described in @brown2020SummaryAbundance2020 applied to spawning sites of Chinook Salmon in Southern BC. 
+Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics for assessments under the WSP [@holtIndicatorsStatusBenchmarks2009a]. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances and associated CU-level abundance benchmarks are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years <!--KH: does 'less than half of available years' mean 'less than half the years in the last three generations'?  - I assume this is what's meant bc if it was a 50 year time series, with the last 10 years missing, you would meet the 'half of available years' threshold, but not have much for short-term trend analysis  -->or are of low quality representing only presence/absence, <!--KH: start new sentence: These criteria for trend detection are --> similar to criteria described in @brown2020SummaryAbundance2020 <!--and (?) --> applied to spawning sites of Chinook Salmon in Southern BC. 
 
 
 CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
@@ -30,7 +41,7 @@ In addition, a CU may be data deficient if data to resolve the existence of the 
 ### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
 <!-- CH comment: send this section to Ron Kadowaki, Diana Dobson, and Brendan for review-->
 
-Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, and (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. 
+Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference through SMU-specific correlation analyses, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data,  (ii) environmental drivers are also similar among CUs, e.g., as reflected by the distribution of CUs across biogeoclimatic and Marine Adaptive zones, (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local experts. The burden of proof would be to identify that data deficient CUs have similar properties to neighbouring CUs, with the default assumption that each CU represents unique biodiversity where status and trends cannot be represented by other CUs. 
 
 
 Overall, our goal in this step is to identify if status and trends of CUs are likely to be consistent within an SMU. We refer to statuses against LRPs where data deficient CUs are represented by CUs with data as 'interim status', which is provisional until all component CUs can be assessed. In some cases natural variability alone may result in differences in status and trends even if the 4 criteria listed below are met, which underscores the benefits of monitoring and assessing all component CUs. <!--CH additional sentence to address possible 'weakening' of LRP status with word interim--> For LRPs based on 100% of CUs being above red status, an interim status indicating a breach of the LRP (i.e., at least one CU with red status) can still be used to trigger a rebuilding plan under the Fish Stock provisions since the improved monitoring of data-deficient CUs alone will not result in an increase in SMU status to 100% (all CUs above red status). 
@@ -50,21 +61,22 @@ The PA policy also suggests that when a stock is DD, a meta analysis approach sh
 This may be a bit out there but: maybe we could suggest the establishment of a data collection plan that would be analogous to the recovery plan but to address data deficiency. -This plan would include a list of data that could be collected (e.g. monitoring of spawning grounds, establishment of genetic markers, catch sampling, ageing, etc.) and potential costs associated with everything? -- Also this plan could clearly indicate if spawning grounds are too remote, inaccessible, or too costly to monitor. -- I think that having that kind of information documented would go a long way in establishing priorities.    
 -->
 
-**Threats** are defined here is any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends. 
+**Threats** are defined here as any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends. 
 
 
-Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt can impact biological characteristics of Chinook salmon, such as spawning time and age and therefore status and trends [@beechieHydrologicRegimeConservation2006]. Broad similarities in macroclimate can be represented Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones"). These units are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales such that each CU tends to be associated with a unique unit. Therefore those units are less useful for identifying similarity in environmental conditions among CUs, though other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.
+Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt, can impact biological characteristics of Chinook salmon, such as spawning time and age, and <!--can--> therefore <!--impact --> status and trends [@beechieHydrologicRegimeConservation2006] <!--KH: could consider moving beechie citation to after mention of imapcts on spawn timing and age since this is what his paper looked at; the extension to status and trends is ours (which is logical, but not quite what they showed) -->. Broad similarities in macroclimate can be represented by Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones"<!--;FAZ (KH: suggestion to give abbreviation here so can be used below; I found I was getting lost from reference to 'units'; I think referring directly to FAZ would help)-->). These units"<!-- FAZ --> are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales such that each CU tends to be associated with a unique <!--FAZ-->unit. Therefore <!--FAZ -->those units are less useful for identifying similarity in environmental conditions among CUs, though other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.  <!-- KH: should we explicitly say that we recommend using biogeoclimatic zones instead of FAZ alone when assessing possible similarity to environmental drivers associated with freshwater habitats?-->
 
-To identify similarities in environmental conditions and drivers in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive zones for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids". There are 12 Marine Adaptive zones for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press)<!--footnote this if not published-->. Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrological regimes, biogeoclimatic zones, and Marine Adaptive zones.  
+To identify similarities in environmental conditions and drivers in the nearshore marine environment, @holtbyConservationUnitsPacific2007 describe Marine Adaptive Zones for Pacific salmon which reflect "watershed-coastal ecosystems of distinct physical characteristics, including the full sequence of riverine, estuarine, and near-short marine habitats used by juvenile anadromous salmonids". There are 12 Marine Adaptive zones for Pacific salmon in BC and the Yukon, ranging from the Strait of Georgia in the south to the Bering Sea in the north (COSEWIC 2021 in press)<!--footnote this if not published-->. <!-- KH: I would suggest moving the next sentence to the start of the next paragraph -->Although SMUs are usually defined to be spatially cohesive groups of CUs and therefore component CUs may experience similar environmental conditions, SMUs and their component CUs often span multiple hydrological regimes, biogeoclimatic zones, and Marine Adaptive zones.  
 
 CUs containing unique environmental drivers within an SMU may have divergent statuses and trends from neighbouring CUs, either directly due to the different environments or their interaction with other natural drivers and anthropogenic threats.
 
 
 CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each other under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity). In other SMUs, CUs with various life-history types are combined (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish) <!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
-CUs with very different **habitat capacities** may respond differently to similar threats. For example very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Pacific Salmon Status Scanner, where as very large CUs may more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
+CUs with very different **habitat capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds, e.g., 1500 fish an abundance threshold within the Pacific Salmon Status Scanner, whereas very large CUs may be more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
 <!--CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.-->
 
+<!--KH: Do we know what the 1500 used in the salmon scanner tool was based on? Was it a result from the decision tree analysis?  Or, was it picked a priori as a threshold based on some other rationale?  I'm wondering if it makes more sense to use the COSEWIC 1000 fish threshold for this example if it's somehow more firmly rooted in conservation theory / literature as a criticical threshold?  I'm not sure on this - just a thought.  -->
 
 Covariation in productivity is well documented among spatially proximate populations across species [@petermanPatternsCovariationSurvival1998; @pyperSpatialCovariationSurvival2002; @dornerSpatialTemporalPatterns2018], providing some support for the use of data-rich CUs to inform CUs without data. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool [@pacificsalmonfoundationMethodsAssessingStatus2020],  pairwise correlations in spawner abundances among CUs within SMUs tended to be positive for Pink, Chum, Coho, and Sockeye Salmon (Appendix app:meta-analysis-appendix, Figure \@ref(lrp-smu-corr-plot)). For Chinook Salmon, correlations were more variable among CUs and sometimes negative, in part due to the influence of hatchery production in some of those systems. <!--CH: The 2 SMUs with negative correlations are Georgia Strait Chinook and Johnstone Strait/Mainland Inlet Chinook which have significant hatchery production, and my read of PSE report looks like they used total spawners, not natural-origin spawners--> A pervasive problem with correlation analyses for Pacific salmon is that populations with available time-series tend to be more heavily managed and may not be representative of those without data which tend to be remote and without direct management interventions. <!--CH remove: In addition, the four criteria described have not been accounted, and so correlations may be biased low.--> 
 
@@ -72,6 +84,10 @@ Overall, we suggest caution when representing SMU status with only a subset of C
 
 If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, we recommend collection of CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. 
 
+<!--KH: If there are data defieicnt CUs that do not meet criteria for inference, do we recommend that the SMU be designated data deficient, in which case status against an LRP cannot be estimated?  If so, could we desrcibe this by replacing the above paragraph with:  
+If data-deficient CUs do not meet the criteria for inference from the remaining CUs within an SMU, SMU status relative to an LRP cannot be assigned. In this case, the entire SMU should be designated as data deficient, with a recommendation to collect CU-level data to inform biological assessments. Data collection would therefore be prioritized for CUs that diverge in threats, environmental drivers, life-history capacities and/or habitat capacities from neighbouring CUs. 
+
+-->
 
 ### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
 
