CH added pgh on CU representativeness to wCVI CK in Case Study WP

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -83,6 +83,14 @@ This SMU was included as a case study to demonstrate the development of LRPs und
 Most Chinook in this SMU are 'ocean type', entering the ocean 1-3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012]. 'Stream type' fish, those that stay in the river for one year after emergence, are rare. After entering the ocean, WCVI Chinook migrate into northern BC and southeast Alaska waters to rear for 2 to 7 years, returning to spawn predominantly at ages 4 and 5 [@dfoAssessmentWestCoast2012].
 
 
+We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewiccommitteeonthestatusofendangeredwildlifeincanadaCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations likely compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat across WCVI <!--CH Q: Is this true for NWVI too?-->. However, unique to West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon in nearshore habitat used by Chinook Salmon, which poses a threat to this CU [@cosewiccommitteeonthestatusofendangeredwildlifeincanadaCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot are threats from tourism (~100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewiccommitteeonthestatusofendangeredwildlifeincanadaCOSEWICAssessmentStatus2020].
+
+All three CUs likely experience similar freshwater environmental conditions being part of the same Freshwater Adaptive Zone, West Vancouver Island, characterized by very high annual water flow, relatively warm temperatures, low wetland influence, and low alpine cold water and glacial influences [@holtbyConservationUnitsPacific2007a]. Spawning habitats for all three CUs are primarily within the Coastal Western Hemlock biogeoclimatic zone. However, the marine environment experienced by juveniles from the West Vancouver Island-Nootka and Kyuoquot and West Vancouver Island-South CUs differs from that of the West Vancouver Island North CU to the north [@holtbyConservationUnitsPacific2007a]. The two southern CUs are influenced by the Juan de Fuca Strait which determines food chain productivity in nearshore environment. For the northern CU,  nearshore marine environment is influenced primarily by the northward flowing coastal current in the North Pacific ocean [@cosewiccommitteeonthestatusofendangeredwildlifeincanadaCOSEWICAssessmentStatus2020].
+ 
+The average generation time is consistent across all three CUs, and they exhibit ocean-type life-history variant and full run timing.  Absolute abundances are not available for these CUs [@brown2020SummaryAbundance2020]. <!--CH note: watershed-area estimate of population capacity for indicator stocks only as well, so are not absolute habitat capacities-->
+
+Based on differences in threats and the coastal marine environment, we suggest that CU status cannot be inferred from neighboring CUs. We identified similarities in conditions at the CU scale because published threats assessments are available at this scale. Finer analyses at the inlet-scale could further inform the extent to which data-deficient inlets can be represented by those with data. 
+
 ### Previous assessments
 
 Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For WCVI-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For WCVI-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, WCVI-North, was not assessed by DFO in 2016 because all component stocks had some level of enhancement over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
